fixed category click bug; tidied up all code in order to help debug; highlighted text on single cards to ensure legibility for now

--- a/index.css
+++ b/index.css
@@ -25,6 +25,12 @@ h2 {
 
 h3 {
     text-align: center;
+    background-color: turquoise;
+}
+
+h4 {
+    text-align: center;
+    background-color: turquoise;
 }
 
 .square {
